# rustmemecointradingbot

./: .gitignore  README.md  docker-compose.yml  kill.sh  start-bot.sh  start-engine.sh  start.sh  start_local.sh
telegram-bot/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
telegram-bot/src/: bot.ts  bot.ts.bak  eliza-client.ts  shared.ts  trojan_ui.ts
trading-engine/: .env.example  Cargo.toml  Dockerfile  schema.sql
trading-engine/migrations/: 001_add_indexes.sql
trading-engine/src/: balance.rs  bundler.rs  execution.rs  gas.rs  grid_trading.rs  history.rs  leaderboards.rs  main.rs  notifications.rs  portfolio.rs  price.rs  risk_engine.rs  token_analysis.rs  wallet.rs  whale_tracker.rs
